--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.6",
+    "image-webpack-loader": "^4.2.0",
     "source-map": "^0.7.2",
     "style-loader": "^0.20.3",
     "uglifyjs-webpack-plugin": "^1.2.4",
