--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "image-webpack-loader": "^4.2.0",
     "source-map": "^0.7.2",
     "style-loader": "^0.20.3",
+    "ts-loader": "^4.1.0",
+    "typescript": "^2.7.2",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.13",
