--- a/package.json
+++ b/package.json
@@ -22,16 +22,20 @@
     "crypto-js": "^3.1.9-1",
     "firebase": "^4.12.0",
     "firebaseui": "^2.6.3",
-    "lit-html": "^0.9.0"
+    "lit-html": "^0.9.0",
+    "riot-route": "^3.1.3"
   },
   "devDependencies": {
     "babel-register": "^6.26.0",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.10",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "favicons-webpack-plugin": "0.0.8",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
+    "html-webpack-inline-source-plugin": "0.0.10",
     "html-webpack-plugin": "^3.0.6",
+    "html-webpack-template": "^6.1.0",
     "image-webpack-loader": "^4.2.0",
     "source-map": "^0.7.2",
     "style-loader": "^0.20.3",
@@ -43,6 +47,7 @@
     "webpack-cli": "^2.0.13",
     "webpack-dev-server": "^3.1.1",
     "webpack-merge": "^4.1.2",
+    "webpack-pwa-manifest": "^3.6.2",
     "webpack-subresource-integrity": "^1.1.0-rc.4",
     "workbox-webpack-plugin": "^3.0.0"
   }
