--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "typescript": "^2.7.2",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack": "^4.1.1",
+    "webpack-auto-inject-version": "^1.1.0",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^2.0.13",
     "webpack-dev-server": "^3.1.1",
