--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "webpack-dev-server --open --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "for /F \"usebackq delims=\" %A in (`git log -1 --oneline`) do firebase deploy --only hosting --message \"%A\""
   },
   "repository": {
     "type": "git",
